--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </nav>
 
 <div class="googleMenu">
-    <a id="logo" href="https://mail.google.com/mail/u/0/?shva=1#inbox"><img src="style/img/logo.png"/></a>
+    <a id="logo" href="https://mail.google.com/mail/u/0/?shva=1#inbox"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/logo.png"/></a>
 
     <form class="search">
         <label for="field"></label><input id="field" name="field" type="text"/>
@@ -30,113 +30,124 @@
     <a id="user" href="https://plus.google.com/u/0/115239898719183516051/posts"> user </a>
 
     <div class="plusmenu">
-        <button type="button" title="Сповіщення"><img src="style/img/notification.png"/></button>
-        <a href="https://plus.google.com/u/0/?hl=uk"><img src="style/img/share.png"></a>
-        <a href="https://plus.google.com/u/0/115239898719183516051/posts"><img src="style/img/photo.png"/></a>
+        <button type="button" title="Сповіщення"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/notification.png"/></button>
+        <a href="https://plus.google.com/u/0/?hl=uk"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/share.png"></a>
+        <a href="https://plus.google.com/u/0/115239898719183516051/posts"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/photo.png"/></a>
     </div>
 </div>
 
 <nav class="mailNav">
-    <button type="button" id="gmailLogo"><img src="style/img/gmail.png"/></button>
+    <button type="button" id="gmailLogo"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/gmail.png"/></button>
     <div class="letterOption">
-        <button type="button" title="Вибрати"><img src="style/img/choose.png"/></button>
-        <button type="button" title="Оновити"><img src="style/img/restore.png"/></button>
-        <a href="#"><img src="style/img/more.png"/></a>
+        <button type="button" title="Вибрати"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/choose.png"/></button>
+        <button type="button" title="Оновити"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/restore.png"/></button>
+        <a href="#"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/more.png"/></a>
     </div>
     <a id="letterNumber" href="#"><b>1-...</b> із <b>... </b></a>
     <div class="letterGide">
-        <a href="#" title="Старіші"><img src="style/img/older.png"></a><a href="#" title="Новіші"><img src="style/img/resent.png"></a>
-        <button type="button" title="Налаштування"><img src="style/img/propertise.png"/></button>
+        <a href="#" title="Старіші"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/older.png"></a><a href="#" title="Новіші"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/resent.png"></a>
+        <button type="button" title="Налаштування"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/propertise.png"/></button>
     </div>
 </nav>
 
 <div class="main">
     <aside>
-        <button type="button" id="writeButton"><img src="style/img/write.png"/></button><br/>
+        <button type="button" id="writeButton"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/write.png"/></button><br/>
         <nav class="letterNav">
             <a href="https://mail.google.com/mail/u/0/?shva=1#inbox" title="Вхідні" class="active"> Вхідні </a> <br/>
             <a href="https://mail.google.com/mail/u/0/?shva=1#all" title="Уся пошта">  Уся пошта </a> <br/>
             <a href="https://mail.google.com/mail/u/0/?shva=1#inbox" title="Вхідні"> Більше </a>
         </nav>
-        <a href="#" id="chat"><img src="style/img/chat.png" title="Чат"/></a>
+        <a href="#" id="chat"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/chat.png" title="Чат"/></a>
     </aside>
 
     <section>
         <div class="letterInfo">
             <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">адресат / адресант</div>
-            <div class="letterTheme">тема / без теми</div>
+            <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+            <div class="fromWho">LiveJournal</div>
+            <div class="letterTheme">govori_slushai оновив/оновила свій журнал!</div>
             <div class="addOns"></div>
-            <div class="whenDate">19.04.13</div>
+            <div class="whenDate">11:23</div>
         </div>
 
         <div class="letterInfo">
             <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">адресат / адресант</div>
-            <div class="letterTheme">тема / без теми</div>
+            <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+            <div class="fromWho">LiveJournal</div>
+            <div class="letterTheme">cardboard_dad оновив/оновила свій журнал!</div>
             <div class="addOns"></div>
-            <div class="whenDate">19.04.13</div>
+            <div class="whenDate">09:06 </div>
         </div>
 
         <div class="letterInfo">
             <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">адресат / адресант</div>
-            <div class="letterTheme">тема / без теми</div>
-            <div class="addOns"><img src="style/img/chat-black.png"></div>
-            <div class="whenDate">19.04.13</div>
+            <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+            <div class="fromWho">Коментар true_bilka в LJ</div>
+            <div class="letterTheme">Reply to your comment in "Ураааааааааааааа!"</div>
+            <div class="addOns"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/chat-black.png"></div>
+            <div class="whenDate">3 трав.</div>
         </div>
 
         <div class="letterInfo">
             <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">адресат / адресант</div>
-            <div class="letterTheme">тема / без теми</div>
+            <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+            <div class="fromWho">art-shkola2013 (4)</div>
+            <div class="letterTheme">Fwd: Вітаємо з Великоднем і запрошуємо на "Арт-школу 2013"</div>
             <div class="addOns"></div>
-            <div class="whenDate">19.04.13</div>
+            <div class="whenDate">3 трав.</div>
         </div>
 
         <div class="letterInfo">
             <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">адресат / адресант</div>
-            <div class="letterTheme">тема / без теми</div>
-            <div class="addOns"><img src="style/img/file.png"></div>
-            <div class="whenDate">19.04.13</div>
+            <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+            <div class="fromWho">LinkedIn Connections</div>
+            <div class="letterTheme">See Julius's connections, experience, and more...</div>
+            <div class="addOns"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/file.png"></div>
+            <div class="whenDate">1 трав.</div>
         </div>
 
         <div class="letterInfo">
             <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">адресат / адресант</div>
-            <div class="letterTheme">тема / без теми</div>
+            <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+            <div class="fromWho">Dropbox Congrats!</div>
+            <div class="letterTheme">You've got Dropbox albums!</div>
             <div class="addOns"></div>
-            <div class="whenDate">19.04.13</div>
+            <div class="whenDate">1 трав.</div>
         </div>
 
         <div class="letterInfo">
             <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">адресат / адресант</div>
-            <div class="letterTheme">тема / без теми</div>
-            <div class="addOns"><img src="style/img/chat-black.png"></div>
-            <div class="whenDate">19.04.13</div>
+            <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+            <div class="fromWho">Лілія Веомі</div>
+            <div class="letterTheme">Fwd:</div>
+            <div class="addOns"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/chat-black.png"></div>
+            <div class="whenDate">29.04.13</div>
          </div>
 
         <div class="letterInfo">
             <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">адресат / адресант</div>
-            <div class="letterTheme">тема / без теми</div>
-            <div class="addOns"><img src="style/img/file.png"></div>
-            <div class="whenDate">19.04.13</div>
+            <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+            <div class="fromWho">Сушко, я (22)</div>
+            <div class="letterTheme">(без теми)</div>
+            <div class="addOns"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/file.png"></div>
+            <div class="whenDate">05.12.12</div>
         </div>
 
+
         <footer>
-            <b>Використано 1%</b> Copyright Google,2013 - <a href="#">Умови та конфіденційність</a>
-            Остання діяльність в обліковому записі: ... хв. тому <a href="#">Подробиці</a>
+            <div id="usingMemory">
+                <b>Використано 1%</b><br/>
+                Використовується 0,1 Гб з 10,1 Гб
+            </div>
+
+            <div id="copyright">
+                &copy; Google,2013 - <a href="#">Умови та конфіденційність</a>
+            </div>
+
+            <div id="lastDid">
+                Остання діяльність в обліковому записі: 41 хв. тому <br/><a href="#">Подробиці</a>
+            </div>
         </footer>
     </section>
 </div>
