--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     </div>
     <a id="letterNumber" href="#"><b>1-...</b> із <b>... </b></a>
     <div class="letterGide">
-        <a href="#" title="Старіші"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/older.png"></a><a href="#" title="Новіші"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/resent.png"></a>
+        <a href="#" title="Старіші"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/older.png"></a><a href="#" title="Новіші">
+        <img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/resent.png"></a>
         <button type="button" title="Налаштування"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/propertise.png"/></button>
     </div>
 </nav>
