--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
         <input id="submit" name="submit" type="submit"/>
     </form>
 
-    <a id="user" href="https://plus.google.com/u/0/115239898719183516051/posts"> user </a>
-
     <div class="plusmenu">
+        <a id="user" href="https://plus.google.com/u/0/115239898719183516051/posts"> user </a>
         <button type="button" title="Сповіщення"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/notification.png"/></button>
         <a href="https://plus.google.com/u/0/?hl=uk"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/share.png"></a>
         <a href="https://plus.google.com/u/0/115239898719183516051/posts"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/photo.png"/></a>
@@ -62,79 +61,152 @@
         <a href="#" id="chat"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/chat.png" title="Чат"/></a>
     </aside>
 
-    <section>
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
-            <div class="fromWho">LiveJournal</div>
-            <div class="letterTheme">govori_slushai оновив/оновила свій журнал!</div>
-            <div class="addOns"></div>
-            <div class="whenDate">11:23</div>
-        </div>
+    <div class="wrap">
+        <section>
+            <div class="letterInfo">
+                <div class="flag"><label><input type="checkbox"/></label></div>
+                <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+                <div class="fromWho">LiveJournal</div>
+                <div class="letterTheme">govori_slushai оновив/оновила свій журнал!</div>
+                <div class="addOns"></div>
+                <div class="whenDate">11:23</div>
+            </div>
 
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
-            <div class="fromWho">LiveJournal</div>
-            <div class="letterTheme">cardboard_dad оновив/оновила свій журнал!</div>
-            <div class="addOns"></div>
-            <div class="whenDate">09:06 </div>
-        </div>
+            <div class="letterInfo">
+                <div class="flag"><label><input type="checkbox"/></label></div>
+                <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+                <div class="fromWho">LiveJournal</div>
+                <div class="letterTheme">cardboard_dad оновив/оновила свій журнал!</div>
+                <div class="addOns"></div>
+                <div class="whenDate">09:06 </div>
+            </div>
 
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
-            <div class="fromWho">Коментар true_bilka в LJ</div>
-            <div class="letterTheme">Reply to your comment in "Ураааааааааааааа!"</div>
-            <div class="addOns"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/chat-black.png"></div>
-            <div class="whenDate">3 трав.</div>
-        </div>
+            <div class="letterInfo">
+                <div class="flag"><label><input type="checkbox"/></label></div>
+                <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+                <div class="fromWho">Коментар true_bilka в LJ</div>
+                <div class="letterTheme">Reply to your comment in "Ураааааааааааааа!"</div>
+                <div class="addOns"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/chat-black.png"></div>
+                <div class="whenDate">3 трав.</div>
+            </div>
 
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
-            <div class="fromWho">art-shkola2013 (4)</div>
-            <div class="letterTheme">Fwd: Вітаємо з Великоднем і запрошуємо на "Арт-школу 2013"</div>
-            <div class="addOns"></div>
-            <div class="whenDate">3 трав.</div>
-        </div>
+            <div class="letterInfo">
+                <div class="flag"><label><input type="checkbox"/></label></div>
+                <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+                <div class="fromWho">art-shkola2013 (4)</div>
+                <div class="letterTheme">Fwd: Вітаємо з Великоднем і запрошуємо на "Арт-школу 2013"</div>
+                <div class="addOns"></div>
+                <div class="whenDate">3 трав.</div>
+            </div>
 
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
-            <div class="fromWho">LinkedIn Connections</div>
-            <div class="letterTheme">See Julius's connections, experience, and more...</div>
-            <div class="addOns"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/file.png"></div>
-            <div class="whenDate">1 трав.</div>
-        </div>
+            <div class="letterInfo">
+                <div class="flag"><label><input type="checkbox"/></label></div>
+                <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+                <div class="fromWho">LinkedIn Connections</div>
+                <div class="letterTheme">See Julius's connections, experience, and more...</div>
+                <div class="addOns"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/file.png"></div>
+                <div class="whenDate">1 трав.</div>
+            </div>
 
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
-            <div class="fromWho">Dropbox Congrats!</div>
-            <div class="letterTheme">You've got Dropbox albums!</div>
-            <div class="addOns"></div>
-            <div class="whenDate">1 трав.</div>
-        </div>
+            <div class="letterInfo">
+                <div class="flag"><label><input type="checkbox"/></label></div>
+                <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+                <div class="fromWho">Dropbox Congrats!</div>
+                <div class="letterTheme">You've got Dropbox albums!</div>
+                <div class="addOns"></div>
+                <div class="whenDate">1 трав.</div>
+            </div>
 
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
-            <div class="fromWho">Лілія Веомі</div>
-            <div class="letterTheme">Fwd:</div>
-            <div class="addOns"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/chat-black.png"></div>
-            <div class="whenDate">29.04.13</div>
-         </div>
+            <div class="letterInfo">
+                <div class="flag"><label><input type="checkbox"/></label></div>
+                <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+                <div class="fromWho">Лілія Веомі</div>
+                <div class="letterTheme">Fwd:</div>
+                <div class="addOns"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/chat-black.png"></div>
+                <div class="whenDate">29.04.13</div>
+            </div>
 
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
-            <div class="fromWho">Сушко, я (22)</div>
-            <div class="letterTheme">(без теми)</div>
-            <div class="addOns"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/file.png"></div>
-            <div class="whenDate">05.12.12</div>
-        </div>
+            <div class="letterInfo">
+                <div class="flag"><label><input type="checkbox"/></label></div>
+                <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+                <div class="fromWho">Сушко, я (22)</div>
+                <div class="letterTheme">(без теми)</div>
+                <div class="addOns"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/file.png"></div>
+                <div class="whenDate">05.12.12</div>
+            </div>
 
+            <div class="letterInfo">
+                <div class="flag"><label><input type="checkbox"/></label></div>
+                <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+                <div class="fromWho">LiveJournal</div>
+                <div class="letterTheme">govori_slushai оновив/оновила свій журнал!</div>
+                <div class="addOns"></div>
+                <div class="whenDate">11:23</div>
+            </div>
+
+            <div class="letterInfo">
+                <div class="flag"><label><input type="checkbox"/></label></div>
+                <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+                <div class="fromWho">LiveJournal</div>
+                <div class="letterTheme">cardboard_dad оновив/оновила свій журнал!</div>
+                <div class="addOns"></div>
+                <div class="whenDate">09:06 </div>
+            </div>
+
+            <div class="letterInfo">
+                <div class="flag"><label><input type="checkbox"/></label></div>
+                <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+                <div class="fromWho">Коментар true_bilka в LJ</div>
+                <div class="letterTheme">Reply to your comment in "Ураааааааааааааа!"</div>
+                <div class="addOns"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/chat-black.png"></div>
+                <div class="whenDate">3 трав.</div>
+            </div>
+
+            <div class="letterInfo">
+                <div class="flag"><label><input type="checkbox"/></label></div>
+                <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+                <div class="fromWho">art-shkola2013 (4)</div>
+                <div class="letterTheme">Fwd: Вітаємо з Великоднем і запрошуємо на "Арт-школу 2013"</div>
+                <div class="addOns"></div>
+                <div class="whenDate">3 трав.</div>
+            </div>
+
+            <div class="letterInfo">
+                <div class="flag"><label><input type="checkbox"/></label></div>
+                <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+                <div class="fromWho">LinkedIn Connections</div>
+                <div class="letterTheme">See Julius's connections, experience, and more...</div>
+                <div class="addOns"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/file.png"></div>
+                <div class="whenDate">1 трав.</div>
+            </div>
+
+            <div class="letterInfo">
+                <div class="flag"><label><input type="checkbox"/></label></div>
+                <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+                <div class="fromWho">Dropbox Congrats!</div>
+                <div class="letterTheme">You've got Dropbox albums!</div>
+                <div class="addOns"></div>
+                <div class="whenDate">1 трав.</div>
+            </div>
+
+            <div class="letterInfo">
+                <div class="flag"><label><input type="checkbox"/></label></div>
+                <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+                <div class="fromWho">Лілія Веомі</div>
+                <div class="letterTheme">Fwd:</div>
+                <div class="addOns"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/chat-black.png"></div>
+                <div class="whenDate">29.04.13</div>
+            </div>
+
+            <div class="letterInfo">
+                <div class="flag"><label><input type="checkbox"/></label></div>
+                <div class="star"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/star.png"></div>
+                <div class="fromWho">Сушко, я (22)</div>
+                <div class="letterTheme">(без теми)</div>
+                <div class="addOns"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/file.png"></div>
+                <div class="whenDate">05.12.12</div>
+            </div>
+        </section>
 
         <footer>
             <div id="usingMemory">
@@ -150,7 +222,8 @@
                 Остання діяльність в обліковому записі: 41 хв. тому <br/><a href="#">Подробиці</a>
             </div>
         </footer>
-    </section>
+    </div>
+
 </div>
 </body>
 </html>
