--- a/index.html
+++ b/index.html
@@ -51,211 +51,209 @@
     </div>
 </nav>
 
-<div class="main">
-    <aside>
-        <button type="button" id="writeButton"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/write.png"/></button><br/>
-        <nav class="letterNav">
-            <a href="https://mail.google.com/mail/u/0/?shva=1#inbox" title="Вхідні" class="active"> Вхідні </a> <br/>
-            <a href="https://mail.google.com/mail/u/0/?shva=1#all" title="Уся пошта">  Уся пошта </a> <br/>
-            <a href="https://mail.google.com/mail/u/0/?shva=1#inbox" title="Вхідні"> Більше </a>
-        </nav>
-        <a href="#" id="chat"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/chat.png" title="Чат"/></a>
-    </aside>
+<aside>
+    <button type="button" id="writeButton"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/write.png"/></button><br/>
+    <nav class="letterNav">
+        <a href="https://mail.google.com/mail/u/0/?shva=1#inbox" title="Вхідні" class="active"> Вхідні </a> <br/>
+        <a href="https://mail.google.com/mail/u/0/?shva=1#all" title="Уся пошта">  Уся пошта </a> <br/>
+        <a href="https://mail.google.com/mail/u/0/?shva=1#inbox" title="Вхідні"> Більше </a>
+    </nav>
+    <a href="#" id="chat"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/chat.png" title="Чат"/></a>
+</aside>
 
-    <section>
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">LiveJournal</div>
-            <div class="letterTheme">govori_slushai оновив/оновила свій журнал!</div>
-            <div class="a-w">
-                <div class="addOns"><img src="style/img/blank.png"></div>
-                <div class="whenDate">11:23</div>
-            </div>
-
+<section>
+    <div class="letterInfo">
+        <div class="flag"><label><input type="checkbox"/></label></div>
+        <div class="star"><img src="style/img/star.png"></div>
+        <div class="fromWho">LiveJournal</div>
+        <div class="letterTheme">govori_slushai оновив/оновила свій журнал!</div>
+        <div class="a-w">
+            <div class="addOns"><img src="style/img/blank.png"></div>
+            <div class="whenDate">11:23</div>
         </div>
 
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">LiveJournal</div>
-            <div class="letterTheme">cardboard_dad оновив/оновила свій журнал!</div>
-            <div class="a-w">
-                <div class="addOns"><img src="style/img/blank.png"></div>
-                <div class="whenDate">09:06 </div>
-            </div>
+    </div>
+
+    <div class="letterInfo">
+        <div class="flag"><label><input type="checkbox"/></label></div>
+        <div class="star"><img src="style/img/star.png"></div>
+        <div class="fromWho">LiveJournal</div>
+        <div class="letterTheme">cardboard_dad оновив/оновила свій журнал!</div>
+        <div class="a-w">
+            <div class="addOns"><img src="style/img/blank.png"></div>
+            <div class="whenDate">09:06 </div>
+        </div>
+    </div>
+
+    <div class="letterInfo">
+        <div class="flag"><label><input type="checkbox"/></label></div>
+        <div class="star"><img src="style/img/star.png"></div>
+        <div class="fromWho">Коментар true_bilka в LJ</div>
+        <div class="letterTheme">Reply to your comment in "Ураааааааааааааа!"</div>
+        <div class="a-w">
+            <div class="addOns"><img src="style/img/chat-black.png"></div>
+            <div class="whenDate">3 трав.</div>
+        </div>
+    </div>
+
+    <div class="letterInfo">
+        <div class="flag"><label><input type="checkbox"/></label></div>
+        <div class="star"><img src="style/img/star.png"></div>
+        <div class="fromWho">art-shkola2013 (4)</div>
+        <div class="letterTheme">Fwd: Вітаємо з Великоднем і запрошуємо на "Арт-школу 2013"</div>
+        <div class="a-w">
+            <div class="addOns"><img src="style/img/blank.png"></div>
+            <div class="whenDate">3 трав.</div>
+        </div>
+    </div>
+
+    <div class="letterInfo">
+        <div class="flag"><label><input type="checkbox"/></label></div>
+        <div class="star"><img src="style/img/star.png"></div>
+        <div class="fromWho">LinkedIn Connections</div>
+        <div class="letterTheme">See Julius's connections, experience, and more...</div>
+        <div class="a-w">
+            <div class="addOns"><img src="style/img/file.png"></div>
+            <div class="whenDate">1 трав.</div>
+        </div>
+    </div>
+
+    <div class="letterInfo">
+        <div class="flag"><label><input type="checkbox"/></label></div>
+        <div class="star"><img src="style/img/star.png"></div>
+        <div class="fromWho">Dropbox Congrats!</div>
+        <div class="letterTheme">You've got Dropbox albums!</div>
+        <div class="a-w">
+            <div class="addOns"><img src="style/img/blank.png"></div>
+            <div class="whenDate">1 трав.</div>
+        </div>
+    </div>
+
+    <div class="letterInfo">
+        <div class="flag"><label><input type="checkbox"/></label></div>
+        <div class="star"><img src="style/img/star.png"></div>
+        <div class="fromWho">Лілія Веомі</div>
+        <div class="letterTheme">Fwd:</div>
+        <div class="a-w">
+            <div class="addOns"><img src="style/img/chat-black.png"></div>
+            <div class="whenDate">29.04.13</div>
+        </div>
+    </div>
+
+    <div class="letterInfo">
+        <div class="flag"><label><input type="checkbox"/></label></div>
+        <div class="star"><img src="style/img/star.png"></div>
+        <div class="fromWho">Сушко, я (22)</div>
+        <div class="letterTheme">(без теми)</div>
+        <div class="a-w">
+            <div class="addOns"><img src="style/img/file.png"></div>
+            <div class="whenDate">05.12.12</div>
+        </div>
+    </div>
+
+    <div class="letterInfo">
+        <div class="flag"><label><input type="checkbox"/></label></div>
+        <div class="star"><img src="style/img/star.png"></div>
+        <div class="fromWho">LiveJournal</div>
+        <div class="letterTheme">govori_slushai оновив/оновила свій журнал!</div>
+        <div class="a-w">
+            <div class="addOns"><img src="style/img/blank.png"></div>
+            <div class="whenDate">11:23</div>
+        </div>
+    </div>
+
+    <div class="letterInfo">
+        <div class="flag"><label><input type="checkbox"/></label></div>
+        <div class="star"><img src="style/img/star.png"></div>
+        <div class="fromWho">LiveJournal</div>
+        <div class="letterTheme">cardboard_dad оновив/оновила свій журнал!</div>
+        <div class="a-w">
+            <div class="addOns"><img src="style/img/blank.png"></div>
+            <div class="whenDate">09:06 </div>
+        </div>
+    </div>
+
+    <div class="letterInfo">
+        <div class="flag"><label><input type="checkbox"/></label></div>
+        <div class="star"><img src="style/img/star.png"></div>
+        <div class="fromWho">Коментар true_bilka в LJ</div>
+        <div class="letterTheme">Reply to your comment in "Ураааааааааааааа!"</div>
+        <div class="a-w">
+            <div class="addOns"><img src="style/img/chat-black.png"></div>
+            <div class="whenDate">3 трав.</div>
+        </div>
+    </div>
+
+    <div class="letterInfo">
+        <div class="flag"><label><input type="checkbox"/></label></div>
+        <div class="star"><img src="style/img/star.png"></div>
+        <div class="fromWho">art-shkola2013 (4)</div>
+        <div class="letterTheme">Fwd: Вітаємо з Великоднем і запрошуємо на "Арт-школу 2013"</div>
+        <div class="a-w">
+            <div class="addOns"><img src="style/img/blank.png"></div>
+            <div class="whenDate">3 трав.</div>
+        </div>
+    </div>
+
+    <div class="letterInfo">
+        <div class="flag"><label><input type="checkbox"/></label></div>
+        <div class="star"><img src="style/img/star.png"></div>
+        <div class="fromWho">LinkedIn Connections</div>
+        <div class="letterTheme">See Julius's connections, experience, and more...</div>
+        <div class="a-w">
+            <div class="addOns"><img src="style/img/file.png"></div>
+            <div class="whenDate">1 трав.</div>
+        </div>
+    </div>
+
+    <div class="letterInfo">
+        <div class="flag"><label><input type="checkbox"/></label></div>
+        <div class="star"><img src="style/img/star.png"></div>
+        <div class="fromWho">Dropbox Congrats!</div>
+        <div class="letterTheme">You've got Dropbox albums!</div>
+        <div class="a-w">
+            <div class="addOns"><img src="style/img/blank.png"></div>
+            <div class="whenDate">1 трав.</div>
+        </div>
+    </div>
+
+    <div class="letterInfo">
+        <div class="flag"><label><input type="checkbox"/></label></div>
+        <div class="star"><img src="style/img/star.png"></div>
+        <div class="fromWho">Лілія Веомі</div>
+        <div class="letterTheme">Fwd:</div>
+        <div class="a-w">
+            <div class="addOns"><img src="style/img/chat-black.png"></div>
+            <div class="whenDate">29.04.13</div>
+        </div>
+    </div>
+
+    <div class="letterInfo">
+        <div class="flag"><label><input type="checkbox"/></label></div>
+        <div class="star"><img src="style/img/star.png"></div>
+        <div class="fromWho">Сушко, я (22)</div>
+        <div class="letterTheme">(без теми)</div>
+        <div class="a-w">
+            <div class="addOns"><img src="style/img/file.png"></div>
+            <div class="whenDate">05.12.12</div>
+        </div>
+    </div>
+
+
+    <footer>
+        <div id="usingMemory">
+            <b>Використано 1%</b><br/>
+            Використовується 0,1 Гб з 10,1 Гб
         </div>
 
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">Коментар true_bilka в LJ</div>
-            <div class="letterTheme">Reply to your comment in "Ураааааааааааааа!"</div>
-            <div class="a-w">
-                <div class="addOns"><img src="style/img/chat-black.png"></div>
-                <div class="whenDate">3 трав.</div>
-            </div>
+        <div id="copyright">
+            &copy; Google,2013 - <a href="http://mail.google.com/mail/help/intl/uk/terms.html">Умови та конфіденційність</a>
         </div>
 
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">art-shkola2013 (4)</div>
-            <div class="letterTheme">Fwd: Вітаємо з Великоднем і запрошуємо на "Арт-школу 2013"</div>
-            <div class="a-w">
-                <div class="addOns"><img src="style/img/blank.png"></div>
-                <div class="whenDate">3 трав.</div>
-            </div>
+        <div id="lastDid">
+            Остання діяльність в обліковому записі: 41 хв. тому <br/><a href="https://mail.google.com/mail/u/0/?ui=2&ik=8e13ba2dc8&view=ac">Подробиці</a>
         </div>
-
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">LinkedIn Connections</div>
-            <div class="letterTheme">See Julius's connections, experience, and more...</div>
-            <div class="a-w">
-                <div class="addOns"><img src="style/img/file.png"></div>
-                <div class="whenDate">1 трав.</div>
-            </div>
-        </div>
-
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">Dropbox Congrats!</div>
-            <div class="letterTheme">You've got Dropbox albums!</div>
-            <div class="a-w">
-                <div class="addOns"><img src="style/img/blank.png"></div>
-                <div class="whenDate">1 трав.</div>
-            </div>
-        </div>
-
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">Лілія Веомі</div>
-            <div class="letterTheme">Fwd:</div>
-            <div class="a-w">
-                <div class="addOns"><img src="style/img/chat-black.png"></div>
-                <div class="whenDate">29.04.13</div>
-            </div>
-        </div>
-
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">Сушко, я (22)</div>
-            <div class="letterTheme">(без теми)</div>
-            <div class="a-w">
-                <div class="addOns"><img src="style/img/file.png"></div>
-                <div class="whenDate">05.12.12</div>
-            </div>
-        </div>
-
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">LiveJournal</div>
-            <div class="letterTheme">govori_slushai оновив/оновила свій журнал!</div>
-            <div class="a-w">
-                <div class="addOns"><img src="style/img/blank.png"></div>
-                <div class="whenDate">11:23</div>
-            </div>
-        </div>
-
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">LiveJournal</div>
-            <div class="letterTheme">cardboard_dad оновив/оновила свій журнал!</div>
-            <div class="a-w">
-                <div class="addOns"><img src="style/img/blank.png"></div>
-                <div class="whenDate">09:06 </div>
-            </div>
-        </div>
-
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">Коментар true_bilka в LJ</div>
-            <div class="letterTheme">Reply to your comment in "Ураааааааааааааа!"</div>
-            <div class="a-w">
-                <div class="addOns"><img src="style/img/chat-black.png"></div>
-                <div class="whenDate">3 трав.</div>
-            </div>
-        </div>
-
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">art-shkola2013 (4)</div>
-            <div class="letterTheme">Fwd: Вітаємо з Великоднем і запрошуємо на "Арт-школу 2013"</div>
-            <div class="a-w">
-                <div class="addOns"><img src="style/img/blank.png"></div>
-                <div class="whenDate">3 трав.</div>
-            </div>
-        </div>
-
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">LinkedIn Connections</div>
-            <div class="letterTheme">See Julius's connections, experience, and more...</div>
-            <div class="a-w">
-                <div class="addOns"><img src="style/img/file.png"></div>
-                <div class="whenDate">1 трав.</div>
-            </div>
-        </div>
-
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">Dropbox Congrats!</div>
-            <div class="letterTheme">You've got Dropbox albums!</div>
-            <div class="a-w">
-                <div class="addOns"><img src="style/img/blank.png"></div>
-                <div class="whenDate">1 трав.</div>
-            </div>
-        </div>
-
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">Лілія Веомі</div>
-            <div class="letterTheme">Fwd:</div>
-            <div class="a-w">
-                <div class="addOns"><img src="style/img/chat-black.png"></div>
-                <div class="whenDate">29.04.13</div>
-            </div>
-        </div>
-
-        <div class="letterInfo">
-            <div class="flag"><label><input type="checkbox"/></label></div>
-            <div class="star"><img src="style/img/star.png"></div>
-            <div class="fromWho">Сушко, я (22)</div>
-            <div class="letterTheme">(без теми)</div>
-            <div class="a-w">
-                <div class="addOns"><img src="style/img/file.png"></div>
-                <div class="whenDate">05.12.12</div>
-            </div>
-        </div>
-
-
-        <footer>
-            <div id="usingMemory">
-                <b>Використано 1%</b><br/>
-                Використовується 0,1 Гб з 10,1 Гб
-            </div>
-
-            <div id="copyright">
-                &copy; Google,2013 - <a href="#">Умови та конфіденційність</a>
-            </div>
-
-            <div id="lastDid">
-                Остання діяльність в обліковому записі: 41 хв. тому <br/><a href="#">Подробиці</a>
-            </div>
-        </footer>
-    </section>
-</div>
+    </footer>
+</section>
 </body>
 </html>
