--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset=utf-8 />
     <title>gmail</title>
-    <link rel="stylesheet" type="text/css" href="style/style.roo">
+
+    <link rel="stylesheet/roole" type="text/css" href="style/style.roo">
     <script src="style/roole.min.js"></script>
 </head>
 
