--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </nav>
 
 <div class="googleMenu">
-    <a id="logo" href="https://mail.google.com/mail/u/0/?shva=1#inbox"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/logo.png"/></a>
+    <a id="logo" href="https://mail.google.com/mail/u/0/?shva=1#inbox"><img src="style/img/logo.png"/></a>
 
     <form class="search">
         <label for="field"></label><input id="field" name="field" type="text"/>
@@ -32,34 +32,34 @@
 
     <div class="plusmenu">
         <span><a id="user" href="https://plus.google.com/u/0/115239898719183516051/posts"> user </a></span>
-        <button type="button" title="Сповіщення"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/notification.png"/></button>
-        <a href="https://plus.google.com/u/0/?hl=uk"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/share.png"></a>
-        <a href="https://plus.google.com/u/0/115239898719183516051/posts"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/photo.png"/></a>
+        <button type="button" title="Сповіщення"><img src="style/img/notification.png"/></button>
+        <a href="https://plus.google.com/u/0/?hl=uk"><img src="style/img/share.png"></a>
+        <a href="https://plus.google.com/u/0/115239898719183516051/posts"><img src="style/img/photo.png"/></a>
     </div>
 </div>
 
 <nav class="mailNav">
-    <button type="button" id="gmailLogo"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/gmail.png"/></button>
+    <button type="button" id="gmailLogo"><img src="style/img/gmail.png"/></button>
     <div class="letterOption">
-        <button type="button" title="Вибрати"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/choose.png"/></button>
-        <button type="button" title="Оновити"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/restore.png"/></button>
-        <a href="#"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/more.png"/></a>
+        <button type="button" title="Вибрати"><img src="style/img/choose.png"/></button>
+        <button type="button" title="Оновити"><img src="style/img/restore.png"/></button>
+        <a href="#"><img src="style/img/more.png"/></a>
     </div>
     <a id="letterNumber" href="#"><b>1-...</b> із <b>... </b></a>
     <div class="letterGide">
-        <a href="#" title="Старіші"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/older.png"></a><a href="#" title="Новіші"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/resent.png"></a>
-        <button type="button" title="Налаштування"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/propertise.png"/></button>
+        <a href="#" title="Старіші"><img src="style/img/older.png"></a><a href="#" title="Новіші"><img src="style/img/resent.png"></a>
+        <button type="button" title="Налаштування"><img src="style/img/propertise.png"/></button>
     </div>
 </nav>
 
 <aside>
-    <button type="button" id="writeButton"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/write.png"/></button><br/>
+    <button type="button" id="writeButton"><img src="style/img/write.png"/></button><br/>
     <nav class="letterNav">
         <a href="https://mail.google.com/mail/u/0/?shva=1#inbox" title="Вхідні" class="active"> Вхідні </a> <br/>
         <a href="https://mail.google.com/mail/u/0/?shva=1#all" title="Уся пошта">  Уся пошта </a> <br/>
         <a href="https://mail.google.com/mail/u/0/?shva=1#inbox" title="Вхідні"> Більше </a>
     </nav>
-    <a href="#" id="chat"><img src="../../Dropbox/Web%20dev%20Courses/5/юка/gmail/style/img/chat.png" title="Чат"/></a>
+    <a href="#" id="chat"><img src="style/img/chat.png" title="Чат"/></a>
 </aside>
 
 <section>
